scenarios/development-headers/developer-header.yaml
# Configure header to route to version 2
# Expected behavior: when logged as user jason, the reviews v2 will be presented
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: reviews
spec:
  hosts:
    - reviews
  http:
  - match:
    - headers:
        end-user:
          exact: development
    route:
    - destination:
        host: reviews
        subset: v2
  - route:
    - destination:
        host: reviews
        subset: v1
